package.name = "shadowplay"
package.version = "0.16.0"
package.edition = "2021"
package.authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>", "VK Company / mail.ru"]
package.readme = "README.org"
package.license = "MIT/Apache-2.0"
package.repository = "https://github.com/mailru/shadowplay/"
package.description = "Utility for checking puppet syntax, a puppet manifest linter, a pretty printer, and a utility for exploring the Hiera."

[profile.release]

# https://github.com/johnthagen/min-sized-rust
lto = true

[[bin]]
name = "shadowplay"
path = "src/shadowplay/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
serde_regex = "1.1"
serde_yaml = "*"
serde_json = "*"
nom = "7"
nom_locate = "4"
pretty = {version = "0.11", features = [ "termcolor" ] }
yaml-rust = "0"
located_yaml = "0.2.1"
linked-hash-map = {version = "0", features = ["serde_impl"] }
anyhow = "1"
lazy_static = "1"
log = "*"
env_logger = "*"
structopt = "0"
