package.name = "puppet-parser"
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>", "VK Company / mail.ru"]
package.license = "MIT/Apache-2.0"

[dependencies]
puppet-lang = { path = "../puppet_lang", version = "0" }
puppet-tool = { path = "../puppet_tool", version = "0" }
regex = "1"
lazy_static = "1"
nom = "7"
nom_locate = "4"
serde = { version = "1.0", features = ["derive"] }
