package.name = "puppet-pp-lint"
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>"]

[dependencies]
puppet-lang = { path = "../puppet_lang" }
puppet-ast-tool = { path = "../puppet_ast_tool" }
puppet-parser = { path = "../puppet_parser" }
