package.name = "puppet-pp-lint"
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>"]

[dependencies]
puppet-lang = { path = "../puppet_lang", version = "0" }
puppet-tool = { path = "../puppet_tool", version = "0" }
puppet-parser = { path = "../puppet_parser", version = "0" }
nom = "7"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
serde_regex = "1.1"
