package.name = "puppet-pp-printer"
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>"]

[dependencies]
puppet-lang = { path = "../puppet_lang", version = "0" }
puppet-parser = { path = "../puppet_parser", version = "0" }
pretty = {version = "0.11", features = [ "termcolor" ] }
