package.name = "shadowplay"
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>", "VK Company / mail.ru"]
package.readme = "../README.md"
package.license = "MIT/Apache-2.0"

[[bin]]
name = "shadowplay"
path = "src/main.rs"

[dependencies]
puppet-lang = { path = "../puppet_lang", version = "0" }
puppet-parser = { path = "../puppet_parser", version = "0" }
puppet-tool = { path = "../puppet_tool", version = "0" }
puppet-pp-lint = { path = "../puppet_pp_lint", version = "0" }
puppet-pp-printer = { path = "../puppet_pp_printer", version = "0" }
yaml-rust = "0"
located_yaml = "0.2.1"
linked-hash-map = {version = "0", features = ["serde_impl"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
anyhow = "1"
regex = "1"
lazy_static = "1"
log = "*"
env_logger = "*"
structopt = "0"
nom = "7"
nom_locate = "4"
